Started QT implementation of openGL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
-project("MeshCore2")
-cmake_minimum_required(VERSION 3.3 FATAL_ERROR)
+project("MeshCore")
+cmake_minimum_required(VERSION 3.14 FATAL_ERROR)
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 ### GLM ###
 find_package(glm 0.9.9 REQUIRED)
@@ -9,4 +10,6 @@ include_directories(${GLM_INCLUDE_DIRS})
 
 add_subdirectory(render)
 add_subdirectory(core)
+add_subdirectory(gui)
+add_subdirectory(guiTest)
 
