--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,6 @@ find_package(glm REQUIRED)
 message (STATUS "GLM_INCLUDE_DIRS=${GLM_INCLUDE_DIRS}")
 include_directories(${GLM_INCLUDE_DIRS})
 
-add_subdirectory(glfw)
+#add_subdirectory(glfw)
 add_subdirectory(core)
 add_subdirectory(gui)
-
