--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,4 @@ include_directories(${GLM_INCLUDE_DIRS})
 add_subdirectory(core)
 add_subdirectory(gui)
 #add_subdirectory(glfw)
+add_subdirectory(optix)
