Restructure CMakeLists.txt for demos and remove false inclusion dependencies on src folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,32 +51,5 @@ option(MESHCORE_BUILD_DEMOS "Build demo applications" ON)
 
 # Only include demos if MESHCORE_BUILD_DEMOS is ON
 if(MESHCORE_BUILD_DEMOS)
-
-    ### SimpleRenderDemo.exe ###
-    add_executable(A-SimpleRenderDemo demos/renderDemo.cpp)
-    target_link_libraries(A-SimpleRenderDemo PRIVATE MeshCore)
-
-    ### SimpleCollisionDemo.exe ###
-    add_executable(B-SimpleCollisionDemo demos/collisionDemo.cpp)
-    target_link_libraries(B-SimpleCollisionDemo MeshCore)
-
-    ### TaskDemo.exe ###
-    add_executable(C-TaskDemo demos/taskDemo.cpp)
-    target_link_libraries(C-TaskDemo MeshCore)
-
-    ### ConvexHull.exe ###
-    add_executable(D-ConvexHull demos/convexHullDemo.cpp)
-    target_link_libraries(D-ConvexHull MeshCore)
-
-    ### DistanceDemo.exe ###
-    add_executable(E-DistanceDemo demos/distanceDemo.cpp)
-    target_link_libraries(E-DistanceDemo MeshCore)
-
-    ### AnimationDemo.exe ###
-    add_executable(F-AnimationDemo demos/animationDemo.cpp)
-    target_link_libraries(F-AnimationDemo MeshCore)
-
-    ### ViewStripPackingSolution.exe ###
-    add_executable(G-ViewStripPackingSolution demos/viewStripPackingSolution.cpp)
-    target_link_libraries(G-ViewStripPackingSolution MeshCore)
+    add_subdirectory(demos)
 endif()
