Fix GitHub Actions workflow for Doxygen documentation generation

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,13 +4,23 @@ on:
   push:
     branches:
       - main
-      - github-ci
+
+permissions:
+  contents: read    # to fetch code
+  pages: write      # to deploy to Pages
+  id-token: write   # to verify the deployment originates from an appropriate source
 
 jobs:
   docs:
     runs-on: ubuntu-22.04
+    environment:
+      name: github-pages
     steps:
       - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Checkout doxygen-awesome-css submodule only
+        run: git submodule update --init docs/doxygen-awesome-css
       - name: Install Doxygen and Graphviz dependencies
         run: sudo apt-get update && sudo apt-get install -y doxygen graphviz
       - name: Generate Doxygen docs
@@ -21,13 +31,3 @@ jobs:
           path: docs/html
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
-
-    # Grant GITHUB_TOKEN the permissions required for a Pages deployment
-    permissions:
-      pages: write      # to deploy to Pages
-      id-token: write   # to verify the deployment originates from an appropriate source
-
-    # Deploy to the github-pages environment
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
