--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "datasets"]
 	path = datasets
-	url = git@gitlab.kuleuven.be:codes/datasets/3d-irregular-data-sets.git
+	url = https://gitlab.kuleuven.be/codes/datasets/3d-irregular-data-sets.git
 [submodule "docs/doxygen-awesome-css"]
 	path = docs/doxygen-awesome-css
 	url = https://github.com/jothepro/doxygen-awesome-css.git
