Potential fix for Qt plugin deployment when developing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
-project("MeshCore")
 cmake_minimum_required(VERSION 3.14 FATAL_ERROR)
+project("MeshCore")
 
 ### CPP ###
 set(CMAKE_CXX_STANDARD 17)
@@ -36,15 +36,17 @@ set(CMAKE_AUTOUIC ON)
 find_package(Qt6 COMPONENTS Core Widgets Svg OpenGL OpenGLWidgets REQUIRED)
 find_package(OpenGL REQUIRED)
 find_package(GIF REQUIRED)
+qt_standard_project_setup()
 
 ### MeshCore is the complete library with UI that expands upon MeshCoreBase, requires Qt, OpenGL, ...
 file(GLOB UI_SOURCES src/rendering/*.cpp src/rendering/*.h src/external/gifencoder/*.cpp include/meshcore/rendering/*.h)
-add_library(MeshCore STATIC ${UI_SOURCES})
+qt_add_library(MeshCore STATIC ${UI_SOURCES})
 target_link_libraries(MeshCore PUBLIC MeshCoreBase Qt6::Widgets Qt6::Core Qt6::Svg Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL GIF::GIF)
 
 # Set the shader directory for the MeshCore library
 target_compile_definitions(MeshCore PRIVATE MESHCORE_SHADER_DIR="${CMAKE_CURRENT_SOURCE_DIR}/src/rendering/shaders/")
 target_compile_definitions(MeshCore PRIVATE MESHCORE_ICON_DIR="${CMAKE_CURRENT_SOURCE_DIR}/icons/")
+target_compile_definitions(MeshCore PRIVATE MESHCORE_PLUGIN_DIR PUBLIC MESHCORE_PLUGIN_DIR="${CMAKE_CURRENT_BINARY_DIR}")
 
 # Option to build demos, default ON
 option(MESHCORE_BUILD_DEMOS "Build demo applications" ON)
@@ -53,3 +55,10 @@ option(MESHCORE_BUILD_DEMOS "Build demo applications" ON)
 if(MESHCORE_BUILD_DEMOS)
     add_subdirectory(demos)
 endif()
+
+if(WIN32)
+    # Dirty workaround to deploy plugins when developing: Add a dummy executable that is build at configuration time and force windeployqt to run
+    add_executable(DeployQtPlugins demos/dummy.cpp)
+    target_link_libraries(DeployQtPlugins Qt6::Core Qt6::Widgets)
+    add_custom_command(TARGET MeshCore POST_BUILD COMMAND Qt6::windeployqt "$<TARGET_FILE:DeployQtPlugins>")
+endif ()
