--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -1,27 +1,27 @@
 ### SimpleRenderDemo.exe ###
-add_executable(A-SimpleRenderDemo renderDemo.cpp)
-target_link_libraries(A-SimpleRenderDemo MeshCore)
+qt_add_executable(A-SimpleRenderDemo renderDemo.cpp)
+target_link_libraries(A-SimpleRenderDemo PRIVATE MeshCore)
 
 ### SimpleCollisionDemo.exe ###
-add_executable(B-SimpleCollisionDemo collisionDemo.cpp)
-target_link_libraries(B-SimpleCollisionDemo MeshCore)
+qt_add_executable(B-SimpleCollisionDemo collisionDemo.cpp)
+target_link_libraries(B-SimpleCollisionDemo PRIVATE MeshCore)
 
 ### TaskDemo.exe ###
-add_executable(C-TaskDemo taskDemo.cpp)
-target_link_libraries(C-TaskDemo MeshCore)
+qt_add_executable(C-TaskDemo taskDemo.cpp)
+target_link_libraries(C-TaskDemo PRIVATE MeshCore)
 
 ### ConvexHull.exe ###
-add_executable(D-ConvexHull convexHullDemo.cpp)
-target_link_libraries(D-ConvexHull MeshCore)
+qt_add_executable(D-ConvexHull convexHullDemo.cpp)
+target_link_libraries(D-ConvexHull PRIVATE MeshCore)
 
 ### DistanceDemo.exe ###
-add_executable(E-DistanceDemo distanceDemo.cpp)
-target_link_libraries(E-DistanceDemo MeshCore)
+qt_add_executable(E-DistanceDemo distanceDemo.cpp)
+target_link_libraries(E-DistanceDemo PRIVATE MeshCore)
 
 ### AnimationDemo.exe ###
-add_executable(F-AnimationDemo animationDemo.cpp)
-target_link_libraries(F-AnimationDemo MeshCore)
+qt_add_executable(F-AnimationDemo animationDemo.cpp)
+target_link_libraries(F-AnimationDemo PRIVATE MeshCore)
 
 ### ViewStripPackingSolution.exe ###
-add_executable(G-ViewStripPackingSolution viewStripPackingSolution.cpp)
-target_link_libraries(G-ViewStripPackingSolution MeshCore)
+qt_add_executable(G-ViewStripPackingSolution viewStripPackingSolution.cpp)
+target_link_libraries(G-ViewStripPackingSolution PRIVATE MeshCore)
